--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,22 +15,28 @@
 <body>
     <div class="app-wrap">
         <header>
-            <h1>Universal Weather</h1><br>
-            <p>Search for any city in the world to know the weather</p>
-            <input type="text" autocomplete="off" class="search-box" placeholder="Search for a city...">
+            <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">Universal Weather</h1><br>
+            <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">Search for any city in the world to know the weather</p>
+            <input data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1500" type="text" autocomplete="off" class="search-box" placeholder="Search for a city...">
         </header>
         <main>
             <section class="location">
-                <div class="city">???, ??</div>
-                <div class="date">???</div>
+                <div class="city" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="2000">???, ??</div>
+                <div class="date" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="2500">???</div>
             </section>
-            <section class="current">
+            <section class="current" data-aos="zoom-in" data-aos-duration="2500" data-aos-delay="3000">
                 <div class="temp">??<span>&deg;c</span></div>
                 <div class="weather">???</div>
                 <div class="hi-low">??&deg;c / ??&deg;c</div>
             </section>
         </main>
+        <p class="animate__animated animate__fadeInLeft animate__delay-4s" id="madeby">Made by <a href="https://github.com/MadhanDevlpr" target="_blank"> Madhan Aadithya </a></p>
+        <p class="animate__animated animate__fadeInRight animate__delay-5s"  id="made">Made with Html, Css, Js & <a target="_blank" href="https://openweathermap.org/api">Open Weather API</a></p>
     </div>
     <script src="app.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>  
 </body>
 </html>
